# pda-cli

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: bench.py
src/pda_cli/: cli.py
src/pda_cli/algos/: __init__.py  acf.py  mpm.py  yin.py  zcr.py
src/pda_cli/utils/: __init__.py  notes.py  smoothing.py
tests/: test_algos.py  test_cli.py
